--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/flarnie/nanogenmo-2014/issues"
   },
-  "homepage": "https://github.com/flarnie/nanogenmo-2014"
+  "homepage": "https://github.com/flarnie/nanogenmo-2014",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-markdown-pdf": "^2.1.1"
+  }
 }
